# HomomicsLab

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  HANDBOOK.md  LICENSE  Makefile  README.md  README.zh.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  main.nf  pyproject.toml  三层披露架构.csv
.github/workflows/: ci.yml
backend/: __skill_result__.json  __skill_script__.py  alembic.ini  main.nf
backend/alembic/: env.py
backend/alembic/versions/: 1bd3eff3b8c5_add_execution_trace_nodes_table.py  5afa6a391fc2_add_analysis_reports_table.py  5fd996862269_initial_schema.py  dfd84f733a8c_add_auth_and_tenant_schema.py
backend/data/: inspect_adata.py  mcp_servers.json  memory_graph.json  run_celltypist_annotation.py  run_celltypist_pa12.py
backend/data/.metadata/: cbkb.db-journal  runtime_settings.json
backend/data/debates/: sess_local.json
backend/data/llm_cache/: llm_cache.json
backend/data/skill_store/: skills.json
backend/homics_lab/: cli.py  config.py  main.py
backend/homics_lab/agent/: agent_registry.py  base_agent.py  bioinfo_agent.py  experiment_agent.py  (+6 more)
backend/homomics_lab/: __init__.py  artifacts.py  bootstrap.py  cli.py  config.py  cost_control.py  debate_store.py  llm_client.py  logging_config.py  main.py  metrics.py  nfcore_integration.py  nfcore_results.py  nfcore_schema.py  plots.py  result_summary.py  scheduler.py  secrets.py  security.py  settings_store.py  storage.py  tracing.py  version.py  worker.py
backend/tests/: conftest.py  test_agent_core.py  test_agent_core_semantic_routing.py  test_agent_executor_convergence.py  test_agentic_execution_fixes.py  test_artifacts.py  test_config.py  test_cost_control.py  test_data_store.py  test_database.py  test_integration_v03.py  test_llm.py  test_main.py  test_metrics.py  test_models.py  test_nfcore_integration.py  test_nfcore_results.py  test_plots.py  test_production_observability.py  test_result_summary.py  test_scheduler.py  test_secrets.py  test_stability_guard_l2.py  test_storage.py  test_subagents.py  test_tracing.py
data/: mcp_marketplace_catalog.json
data/analysis_templates/: 10x_scrnaseq_v1.json
data/skill_store/: skills.json
docs/: architecture.md  correction-plan.md  design-extensions-v0.6.md  design-plotting-v0.6.md  design.md  domain-cbkb-skills.md  domain-extension-guide.md  frontend-backend-separation.md  frontend-optimization-plan.md  frontend-production.md  god-class-refactoring.md  homomics-lab-improvement-plan-v1.0.md  homomics-lab-presentation.md  knowledge-ingestion.md  operations.md  plot-embedding-comparison.md  priority-development-plan.md  roadmap-v0.5.md  routing-architecture-assessment.md  session-recap-2026-06-15.md  setup.md  skill-authoring-guide.md  technical-deep-dive.md  tutorial-connect-slurm.md  tutorial-create-domain.md  tutorial-run-nfcore.md
frontend/: Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: chat-auto-refresh.spec.ts  chat-celltypist.spec.ts  global-setup.ts  navigation.spec.ts
frontend/public/: config.json  manifest.json  sw.js
frontend/scripts/: generate-config.cjs
frontend/src/: App.tsx  config.ts  index.css  main.tsx  sdk.ts
phase_0_qc/: inputs.json
scripts/: generate_domains_from_skills.py  health_check.py
skills/: README.md
tmp_dbg/: llm_resp_mt2500.txt  test_bwrap_venv.py  test_celltypist_direct.py  test_celltypist_small.py  test_dataio_small.py  test_exec_llm.py
tmp_dbg/celltypist_small/: driver.py  remap.py  run_celltypist.py
tmp_dbg/celltypist_test/: run_celltypist.py  run_driver.py
tmp_dbg/dataio_small/: driver_obs_summary.py
(+2079 files in other folders)
