[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homomics-lab"
version = "0.1.0"
description = "A general-purpose agent for bioinformatics analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "HomomicsLab Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "redis>=8.0.0",
    "apscheduler>=3.11.2",
    "mcp>=1.27.2",
]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "httpx>=0.26.0"]

[project.scripts]
homomics = "homomics_lab.cli.main:main"
homomics-worker = "homomics_lab.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/homomics_lab"]

[dependency-groups]
dev = [
    "fakeredis>=2.36.1",
]
