[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homomics-lab"
version = "0.1.0"
description = "A general-purpose agent for bioinformatics analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "HomomicsLab Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "redis>=8.0.0",
    "apscheduler>=3.11.2",
    "mcp>=1.27.2",
    "asyncpg>=0.29.0",
    "gunicorn>=21.0.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
    "cryptography>=42.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "boto3>=1.34.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "leidenalg>=0.9.0",
    "umap-learn>=0.5.0",
    "sqlite-vec>=0.1.0",
    "pyarrow>=10.0.0",
    "sentence-transformers>=2.2.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "httpx>=0.26.0", "fakeredis>=2.36.1", "pytest-cov>=4.1.0"]
nfcore = ["nf-core>=2.11.0"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
norecursedirs = ["data", ".git", ".venv", "node_modules", "dist", "build"]

[project.scripts]
homomics = "homomics_lab.cli.main:main"
homomics-worker = "homomics_lab.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/homomics_lab"]

[dependency-groups]
dev = [
    "fakeredis>=2.36.1",
]
